# sdl_demo

./: CMakeLists.txt  README.md
src/: basic_setup.c  main.c
